--- a/src/components/MenuItems.astro
+++ b/src/components/MenuItems.astro
@@ -1,33 +1,9 @@
 ---
 import FeaturedLogos from "./FeaturedLogos.astro";
 import FullScreenModal from "./FullScreenModal.astro";
+import SocialMediaLinks from "./SocialMediaLinks.astro";
+import type {TailwindSize} from "../types/tailwindSizes"
 
-type TailwindSize = 
-  | "0.5rem" // 2 in Tailwind
-  | "0.75rem" // 3 in Tailwind
-  | "1rem" // 4 in Tailwind
-  | "1.25rem" // 5 in Tailwind
-  | "1.5rem" // 6 in Tailwind
-  | "1.75rem" // 7 in Tailwind
-  | "2rem" // 8 in Tailwind
-  | "2.25rem" // 9 in Tailwind
-  | "2.5rem" // 10 in Tailwind
-  | "3rem" // 12 in Tailwind
-  | "3.5rem" // 14 in Tailwind
-  | "4rem" // 16 in Tailwind
-  | "5rem" // 20 in Tailwind
-  | "6rem" // 24 in Tailwind
-  | "8rem" // 32 in Tailwind
-  | "10rem" // 40 in Tailwind
-  | "12rem" // 48 in Tailwind
-  | "16rem" // 64 in Tailwind
-  | "20rem" // 80 in Tailwind
-  | "24rem" // 96 in Tailwind
-  | "32rem" // 128 in Tailwind
-  | "40rem" // 160 in Tailwind
-  | "48rem" // 192 in Tailwind
-  | "56rem" // 224 in Tailwind
-  | "64rem" // 256 in Tailwind;
 
 interface Props {
   size: TailwindSize;
@@ -39,11 +15,13 @@ const { size, className, gitHubLink } = Astro.props;
 ---
 
 <!-- Music Credits -->
-<a class="active:scale-75 transition-all duration-100" aria-label="My Music Credits" href="https://tidal.com/browse/credits/20269946" target="_blank">
-  <div
- 
-    class="flex flex-col flex-none justify-center items-center flex-wrap"
-  >
+<a
+  class="menuItem"
+  aria-label="My Music Credits"
+  href="https://tidal.com/browse/credits/20269946"
+  target="_blank"
+>
+  <div class="flex flex-col flex-none justify-center items-center flex-wrap">
     <svg
       height={size}
       width={size}
@@ -56,9 +34,10 @@ const { size, className, gitHubLink } = Astro.props;
       ></path>
     </svg>
     <span class="font-mono xl:text-lg">Music</span>
-  </div></a>
+  </div></a
+>
 <!-- GitHub -->
-<a class="active:scale-75 transition-all duration-100" href={gitHubLink} target="_blank"
+<a class="menuItem" href={gitHubLink} target="_blank"
   ><div
     slot="trigger"
     class="flex flex-col flex-none justify-center items-center flex-wrap"
@@ -77,11 +56,14 @@ const { size, className, gitHubLink } = Astro.props;
   </div>
 </a>
 <!-- Projects -->
-<FullScreenModal windowId="projects-section" id={1} title="My Recent Projects" subtitle="Take a look at what I'm up to...">
-  <div
-    slot="trigger"
-    class="flex flex-col flex-none justify-center items-center flex-wrap active:scale-75 transition-all duration-100"
-  >
+<FullScreenModal
+  windowId="projects-section"
+  id={1}
+  title="My Recent Projects"
+  subtitle="...take a look at what I'm up to."
+>
+  <!-- Modal Trigger -->
+  <div slot="trigger" class="modalMenuItem">
     <svg
       height={size}
       width={size}
@@ -94,10 +76,49 @@ const { size, className, gitHubLink } = Astro.props;
     </svg>
     <span class="font-mono xl:text-lg">Projects</span>
   </div>
-  <!-- Content -->
-  <FeaturedLogos className="mt-2 flex flex-col flex-nowrap justify-center items-center w-fit scrollbar-hide snap-y snap-mandatory scroll-smooth text-left space-y-14 xl:space-y-0 xl:flex xl:flex-row xl:justify-between xl:items-baseline xl:space-x-12" fullDescription={true} />
- 
+  <!-- Modal Content -->
+  <FeaturedLogos
+    className="mt-2 flex flex-col flex-nowrap justify-center items-center w-fit scrollbar-hide snap-y snap-mandatory scroll-smooth text-left space-y-14 xl:space-y-0 xl:flex xl:flex-row xl:justify-between xl:items-baseline xl:space-x-12"
+    fullDescription={true}
+  />
+
   <span slot="footer" class="font-mono">Scroll for other projects 👇</span>
 </FullScreenModal>
+<FullScreenModal
+  windowId="socials-section"
+  id={3}
+  title="Socials"
+  subtitle="...where you can find me."
+>
+  <!-- Modal Trigger -->
+  <div slot="trigger" class="modalMenuItem">
+    <svg
+      height={size}
+      width={size}
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+    >
+      <path
+        fill="currentColor"
+        d="M2 3H0v18h24V3H2zm20 2v14H2V5h20zM10 7H6v4h4V7zm-6 6h8v4H4v-4zm16-6h-6v2h6V7zm-6 4h6v2h-6v-2zm6 4h-6v2h6v-2z"
+      ></path>
+    </svg>
+    <span class="font-mono xl:text-lg">Socials</span>
+  </div>
+  <!-- Modal Content -->
+  <section
+    id="socialMediaLinks"
+    class="flex flex-col flex-none justify-start items-center flex-wrap space-y-8"
+  >
+  <SocialMediaLinks size={size} />
+  </section>
+</FullScreenModal>
+<style>
+  .modalMenuItem {
+    @apply flex flex-col flex-none justify-center items-center flex-wrap active:scale-90 transition-all duration-100 hover:cursor-pointer;
+  }
 
-<style></style>
+  .menuItem {
+    @apply active:scale-90 transition-all duration-100;
+  }
+</style>
