--- a/src/components/SocialMediaLinks.astro
+++ b/src/components/SocialMediaLinks.astro
@@ -1,41 +1,89 @@
 ---
-import type { TailwindSize } from '../types/tailwindSizes';
+import type { TailwindSize } from "../types/tailwindSizes";
 interface Props {
-  size: TailwindSize,
+  size: TailwindSize;
+  instaHandle?: string | null;
+  linkedInHandle?: string | null;
+  telegramHandle?: string | null;
 }
 
-const {size} = Astro.props
+const {
+  size,
+  instaHandle = null,
+  linkedInHandle = null,
+  telegramHandle = null,
+} = Astro.props;
 ---
 
-<a
-class="flex flex-col justify-center items-center"
-id="Instagram"
-href="https://instagram.com/soundtechjesus"
-><svg
-  xmlns="http://www.w3.org/2000/svg"
-  width={size}
-  height={size}
-  viewBox="0 0 24 24"
-  ><path
-    fill="currentColor"
-    d="M9 3H7v2H2v16h20V5h-5V3H9zm8 4h3v12H4V7h5V5h6v2h2zm-7 2h4v2h-4V9zm4 6h-4v2h4v-2h2v-4h-2v4zm-6-4h2v4H8v-4z"
-  ></path></svg
->
-<span class="font-mono p-1 xl:text-lg">Instagram</span></a
->
-<a
-class="flex flex-col justify-center items-center"
-id="Instagram"
-href="https://instagram.com/soundtechjesus"
-><svg
-  xmlns="http://www.w3.org/2000/svg"
-  width={size}
-  height={size}
-  viewBox="0 0 24 24"
-  ><path
-    fill="currentColor"
-    d="M11 0H5v2H3v6h2v2h6V8H5V2h6V0zm0 2h2v6h-2V2zM0 14h2v4h12v2H0v-6zm2 0h12v-2H2v2zm14 0h-2v6h2v-6zM15 0h4v2h-4V0zm4 8h-4v2h4V8zm0-6h2v6h-2V2zm5 12h-2v4h-4v2h6v-6zm-6-2h4v2h-4v-2z"
-  ></path></svg
->
-<span class="font-mono p-1 xl:text-lg">LinkedIn</span></a
->
+{
+  instaHandle !== null && (
+    <a
+      class="menuItem flex flex-col justify-center items-center"
+      id="Instagram"
+      href=`https://instagram.com/${instaHandle}` target="_blank"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width={size}
+        height={size}
+        viewBox="0 0 24 24"
+      >
+        <path
+          fill="currentColor"
+          d="M9 3H7v2H2v16h20V5h-5V3H9zm8 4h3v12H4V7h5V5h6v2h2zm-7 2h4v2h-4V9zm4 6h-4v2h4v-2h2v-4h-2v4zm-6-4h2v4H8v-4z"
+        />
+      </svg>
+      <span class="font-mono p-1 xl:text-lg">Instagram</span>
+    </a>
+  )
+}
+{
+  linkedInHandle !== null && (
+    <a
+      class="menuItem flex flex-col justify-center items-center"
+      id="Instagram"
+      href=`https://linkedin.com/in/${linkedInHandle}` target="_blank"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width={size}
+        height={size}
+        viewBox="0 0 24 24"
+      >
+        <path
+          fill="currentColor"
+          d="M11 0H5v2H3v6h2v2h6V8H5V2h6V0zm0 2h2v6h-2V2zM0 14h2v4h12v2H0v-6zm2 0h12v-2H2v2zm14 0h-2v6h2v-6zM15 0h4v2h-4V0zm4 8h-4v2h4V8zm0-6h2v6h-2V2zm5 12h-2v4h-4v2h6v-6zm-6-2h4v2h-4v-2z"
+        />
+      </svg>
+      <span class="font-mono p-1 xl:text-lg">LinkedIn</span>
+    </a>
+  )
+}
+{
+  telegramHandle !== null && (
+    <a
+      class="menuItem flex flex-col justify-center items-center"
+      id="Instagram"
+      href=`https://telegram.me/${telegramHandle}` target="_blank"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width={size}
+        height={size}
+        viewBox="0 0 24 24"
+      >
+        <path
+          fill="currentColor"
+          d="M22 2H2v14h2V4h16v12h-8v2h-2v2H8v-4H2v2h4v4h4v-2h2v-2h10V2z"
+        />
+      </svg>
+      <span class="font-mono p-1 xl:text-lg">Telegram</span>
+    </a>
+  )
+}
+
+<style>
+  .menuItem {
+    @apply active:scale-90 transition-all duration-100 lg:hover:dark:bg-light/20 lg:hover:bg-dark/20 active:dark:bg-light/20 active:bg-dark/20  rounded-md px-2 py-4;
+  }
+</style>
