--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,7 +17,7 @@ const {title, description = "Discover the portfolio of a seasoned web developer 
     <meta name="description" content=`${description}`/>
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="light"/>
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="dark"/>
-    <meta name="robots" content="all">
+    <meta name="robots" content=`${import.meta.env.ROBOTS}`/>
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
