--- a/src/components/FeaturedLogos.astro
+++ b/src/components/FeaturedLogos.astro
@@ -6,8 +6,8 @@ import PruvodceBroumovemLogo from "../assets/logos/pruvodceBroumovemLogo.astro";
 import pruvodceScreenshot from "../assets/screenshots/pruvodceScreenshot.png"
 import ulitaScreenshot from "../assets/screenshots/ulitaScreenshot.png"
 import pwScreenshot from "../assets/screenshots/pwScreenshot.png"
-
-
+import JigsawLogo from "../assets/logos/jigsawLogo.astro";
+import jigsawScreenshot from "../assets/screenshots/jigsawScreenshot.png"
 
 interface Props {
   className?: string;
@@ -20,13 +20,43 @@ const {
 } = Astro.props;
 ---
 <ul aria-label="Featured Collaborators" class={className}>
+  <a class="projectItem" href="https://jigsawmusicgroup.com" target="_blank"
+  >
+  <JigsawLogo className="max-h-24 p-1 xl:h-48 xl:w-fit mb-6 " />
+    {
+      fullDescription ? (
+        <div>
+          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website design and development (2023)</h3>
+          <p class="text-lg font-mono py-4">{"With the help of React, express.js, GraphQL and Prisma, I designed and built a modern website and a data ingestion tool in one for Jigsaw Music Group, a boutique music distribution and artist management company from South-east England. The website is built to provide a simple and reliable way for the company's clients to be able to submit their releases with as little friction as possible, speeding up the process massively. The website features a fully-fledged user authentication and management system, a release review and submission system and other tools."}</p>
+          <Image class="max-w-full h-fit rounded-md" src={jigsawScreenshot} alt={"Jigsaw Music Group"} width={jigsawScreenshot.width} height={jigsawScreenshot.height} format="webp" />
+          </div>
+      ) : (
+        ""
+      )
+    }</a
+    >
+  <a class="projectItem" href="https://pruvodcebroumovem.cz" target="_blank"
+  >
+  <PruvodceBroumovemLogo className="max-h-24 p-1 xl:h-48 xl:w-fit mb-6 " />
+    {
+      fullDescription ? (
+        <div>
+          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website development (2022/23)</h3>
+          <p class="text-lg font-mono py-4">{"Pruvodce Broumovem is a project that brings the history of Broumov to life. Using Astro, AlpineJS, and Netlify, I developed a website that offers a guided tour through this charming town. The site combines historical elements with modern design, creating an engaging and educational experience for users. This project was a great opportunity to use cutting-edge technologies to tell a fascinating story"}</p>
+          <Image class="max-w-full h-fit rounded-md" src={pruvodceScreenshot} alt={"Pruvodce Broumovem"} width={pruvodceScreenshot.width} height={pruvodceScreenshot.height} format="webp" />
+          </div>
+      ) : (
+        ""
+      )
+    }</a
+    >
   <a class="projectItem" href="https://practicalwisdom.uk" target="_blank"
   >
    <PracticalWisdomLogo className="max-h-24 p-1 xl:h-48 xl:w-fit mb-6 " />
     {
       fullDescription ? (
         <div>
-          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website design and development</h3>
+          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website design and development (2022)</h3>
           <p class="text-lg font-mono py-4">{"Practical Wisdom is a coaching non-profit with a big heart and an even bigger mission. I had the privilege of designing and developing their WordPress site, creating an online platform that truly reflects their dedication to changing lives. Behind the scenes, I streamlined their IT workflow, managing systems, email servers, CRM, and marketing. This project was a great opportunity to demonstrate my technical skills while supporting a cause I believe in."}</p>
           <Image class="max-w-full h-fit rounded-md" src={pwScreenshot} alt={"Practical Wisdom"} width={pwScreenshot.width} height={pwScreenshot.height} format="webp" />
           </div>
@@ -42,7 +72,7 @@ const {
     {
       fullDescription ? (
         <div>
-          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website re-design and development, Domain administration</h3>
+          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website re-design and development, Domain administration (2022/23)</h3>
           <p class="text-lg font-mono py-4">{"Working with DDM Ulita Broumov was an adventure in creativity. I redesigned their website using WordPress, creating a digital space that showcases their diverse range of courses. From pottery to climbing, each course has its unique place on the site. I also handled domain administration, ensuring a smooth and secure online experience. This project allowed me to blend my passion for web development with my love for learning and creativity."}</p>
           <Image class="max-w-full h-fit rounded-md" src={ulitaScreenshot} alt={"DDM Ulita Broumov"} width={ulitaScreenshot.width} height={ulitaScreenshot.height} format="webp" />
           </div>
@@ -52,22 +82,6 @@ const {
     }</a
     >
   
-  <a class="projectItem" href="https://pruvodcebroumovem.cz" target="_blank"
-  >
-  <PruvodceBroumovemLogo className="max-h-24 p-1 xl:h-48 xl:w-fit mb-6 " />
-    {
-      fullDescription ? (
-        <div>
-          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website development</h3>
-          <p class="text-lg font-mono py-4">{"Pruvodce Broumovem is a project that brings the history of Broumov to life. Using Astro, AlpineJS, and Netlify, I developed a website that offers a guided tour through this charming town. The site combines historical elements with modern design, creating an engaging and educational experience for users. This project was a great opportunity to use cutting-edge technologies to tell a fascinating story"}</p>
-          <Image class="max-w-full h-fit rounded-md" src={pruvodceScreenshot} alt={"Pruvodce Broumovem"} width={pruvodceScreenshot.width} height={pruvodceScreenshot.height} format="webp" />
-          </div>
-      ) : (
-        ""
-      )
-    }</a
-    >
-
   <style>
     .featuredLogo {
       @apply dark:fill-light fill-dark transition-all ease-in-out opacity-90;
