Add tech stack information to project descriptions

--- a/src/components/FeaturedLogos.astro
+++ b/src/components/FeaturedLogos.astro
@@ -26,7 +26,7 @@ const {
     {
       fullDescription ? (
         <div>
-          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website design and development (2023)</h3>
+          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website design and development (2023)<div aria-label="Tech stack for Jigsaw Music Group" class="text-xs">React, GraphQL, Prisma, PostgreSQL, Typescript, Express.js</div></h3>
           <p class="text-lg font-mono py-4">{"With the help of React, express.js, GraphQL and Prisma, I designed and built a modern website and a data ingestion tool in one for Jigsaw Music Group, a boutique music distribution and artist management company from South-east England. The website is built to provide a simple and reliable way for the company's clients to be able to submit their releases with as little friction as possible, speeding up the process massively. The website features a fully-fledged user authentication and management system, a release review and submission system and other tools."}</p>
           <Image class="max-w-full h-fit rounded-md" src={jigsawScreenshot} alt={"Jigsaw Music Group"} width={jigsawScreenshot.width} height={jigsawScreenshot.height} format="webp" />
           </div>
@@ -41,7 +41,7 @@ const {
     {
       fullDescription ? (
         <div>
-          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website development (2022/23)</h3>
+          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website development (2022/23)<div aria-label="Tech stack for Pruvodce broumovem" class="text-xs">Astro, AlpineJS, Netlify</div></h3>
           <p class="text-lg font-mono py-4">{"Pruvodce Broumovem is a project that brings the history of Broumov to life. Using Astro, AlpineJS, and Netlify, I developed a website that offers a guided tour through this charming town. The site combines historical elements with modern design, creating an engaging and educational experience for users. This project was a great opportunity to use cutting-edge technologies to tell a fascinating story"}</p>
           <Image class="max-w-full h-fit rounded-md" src={pruvodceScreenshot} alt={"Pruvodce Broumovem"} width={pruvodceScreenshot.width} height={pruvodceScreenshot.height} format="webp" />
           </div>
@@ -56,7 +56,7 @@ const {
     {
       fullDescription ? (
         <div>
-          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website design and development (2022)</h3>
+          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website design and development (2022)<div aria-label="Tech stack Practical Wisdom" class="text-xs">Wordpress, PHP</div></h3>
           <p class="text-lg font-mono py-4">{"Practical Wisdom is a coaching non-profit with a big heart and an even bigger mission. I had the privilege of designing and developing their WordPress site, creating an online platform that truly reflects their dedication to changing lives. Behind the scenes, I streamlined their IT workflow, managing systems, email servers, CRM, and marketing. This project was a great opportunity to demonstrate my technical skills while supporting a cause I believe in."}</p>
           <Image class="max-w-full h-fit rounded-md" src={pwScreenshot} alt={"Practical Wisdom"} width={pwScreenshot.width} height={pwScreenshot.height} format="webp" />
           </div>
@@ -72,7 +72,7 @@ const {
     {
       fullDescription ? (
         <div>
-          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website re-design and development, Domain administration (2022/23)</h3>
+          <h3 class=" text-center py-2 xs:py-5 text-md xs:text-lg border-y-2 border-y-dark dark:border-y-light">&nbsp;Website re-design and development, Domain administration (2022/23)<div aria-label="Tech stack for Ulita Broumov" class="text-xs">Wordpress, PHP</div></h3>
           <p class="text-lg font-mono py-4">{"Working with DDM Ulita Broumov was an adventure in creativity. I redesigned their website using WordPress, creating a digital space that showcases their diverse range of courses. From pottery to climbing, each course has its unique place on the site. I also handled domain administration, ensuring a smooth and secure online experience. This project allowed me to blend my passion for web development with my love for learning and creativity."}</p>
           <Image class="max-w-full h-fit rounded-md" src={ulitaScreenshot} alt={"DDM Ulita Broumov"} width={ulitaScreenshot.width} height={ulitaScreenshot.height} format="webp" />
           </div>
