--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import '@fontsource-variable/eb-garamond';
 import '@fontsource/vt323'
+import '@fontsource/space-mono';
 
 interface Props {
 	title: string;
@@ -117,7 +118,7 @@ const { title } = Astro.props;
 	} */
 
 	#monogram #lbracket, #monogram #rbracket, #monogram #M {
-		@apply fill-dark dark:fill-light
+		@apply fill-dark dark:fill-light;
 	}
 	
 	code {
